--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ app-name = "YouTube"
 patches-source = "YT-Advanced/ReX-patches"
 integrations-source = "YT-Advanced/ReX-integrations"
 cli-source = "rahulkhatri137/revanced-cli"
-rv-brand = "ReVanced Extended"
+rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
@@ -31,7 +31,7 @@ app-name = "Music"
 patches-source = "YT-Advanced/ReX-patches"
 integrations-source = "YT-Advanced/ReX-integrations"
 cli-source = "rahulkhatri137/revanced-cli"
-rv-brand = "ReVanced Extended"
+rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 apkmirror-arch = "arm64-v8a"
