--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 app-name = "YouTube"
 patches-source = "YT-Advanced/ReX-patches"
 integrations-source = "YT-Advanced/ReX-integrations"
-cli-source = "DemonScans/revanced-cli"
+cli-source = "j-hc/revanced-cli"
 rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -11,7 +11,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 app-name = "Music"
 patches-source = "YT-Advanced/ReX-patches"
 integrations-source = "YT-Advanced/ReX-integrations"
-cli-source = "DemonScans/revanced-cli"
+cli-source = "j-hc/revanced-cli"
 rv-brand = "ProBC"
 build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
